[gd_scene load_steps=8 format=3 uid="uid://cw0mhp762lxcu"]

[ext_resource type="Script" path="res://scripts/level_template.gd" id="1_63kf4"]
[ext_resource type="Script" path="res://scripts/WorldCamera.gd" id="1_ggbii"]
[ext_resource type="PackedScene" uid="uid://bpxvlm8njmgom" path="res://scenes/Utilities/FreezeFrame.tscn" id="2_4pivb"]
[ext_resource type="PackedScene" uid="uid://dn5yhc4hp0l7h" path="res://scenes/Utilities/CameraUtil.tscn" id="3_thanc"]
[ext_resource type="Texture2D" uid="uid://jur3hpnikdc6" path="res://resources/images/environments/decorPlaceholder.png" id="4_h52g1"]
[ext_resource type="PackedScene" uid="uid://qbg5sibnym20" path="res://scenes/World/Objects/anime_box_sprite.tscn" id="6_xh8kk"]
[ext_resource type="AudioStream" uid="uid://bgf1wkvjjnkjp" path="res://resources/audio/music/Secret_Knowledge.wav" id="7_46noc"]

[node name="LevelTemplate" type="Node2D"]
script = ExtResource("1_63kf4")

[node name="SpawnLocation1" type="Node2D" parent="."]
position = Vector2(245, 139)

[node name="SpawnLocation2" type="Node2D" parent="."]
position = Vector2(413, 139)

[node name="SpawnLocation3" type="Node2D" parent="."]
position = Vector2(634, 139)

[node name="SpawnLocation4" type="Node2D" parent="."]
position = Vector2(835, 141)

[node name="Camera" type="Camera2D" parent="."]
z_index = 100
position = Vector2(818, 457)
zoom = Vector2(1.1, 1.1)
script = ExtResource("1_ggbii")

[node name="FreezeFrame" parent="Camera" instance=ExtResource("2_4pivb")]

[node name="CameraUtils" parent="Camera" instance=ExtResource("3_thanc")]

[node name="UI_hint_for_level_design" type="Control" parent="Camera"]
layout_mode = 3
anchors_preset = 0
offset_left = -598.0
offset_top = 419.0
offset_right = 877.0
offset_bottom = 620.0

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(0.473253, 0.814174, 0.943103, 1)
z_index = -100
position = Vector2(818, 401)
scale = Vector2(0.4928, 0.4928)
texture = ExtResource("4_h52g1")

[node name="AnimeBoxHint" parent="." instance=ExtResource("6_xh8kk")]
position = Vector2(736, 793)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_46noc")
autoplay = true
bus = &"music"
